New API REST services to list, get, create, update and delete EVC Schedules
